# liblouisutdml

./: .gitignore  Makefile.in  configure  liblouisutdml-2.vcxproj  liblouisutdml-2.vcxproj.filters  liblouisutdml.pc
doc/: Makefile.in  liblouisutdml.html  liblouisutdml.info  liblouisutdml.txt  version.texi
gnulib/: Makefile.in
java/: Makefile.in
lbu_files/: Makefile.in
liblouisutdml/: Makefile.am  Makefile.in  liblouisutdml.c  liblouisutdml.h  (+7 more)
liblouisutdml/b2m_translator/: 0  DOMAttr.cpp  DOMAttr.h  DOMCDATASection.cpp  DOMCDATASection.h  DOMCharacterData.cpp  DOMCharacterData.h  DOMComment.cpp  DOMComment.h  DOMDocument.cpp  DOMDocument.h  DOMDocumentFragment.cpp  DOMDocumentFragment.h  DOMElement.cpp  DOMElement.h  DOMEntity.cpp  DOMEntity.h  DOMEntityReference.cpp  DOMEntityReference.h  DOMNamedNodeList.cpp  DOMNamedNodeList.h  DOMNode.cpp  DOMNode.h  DOMNodeList.cpp  DOMNodeList.h  DOMNodeListItem.cpp  DOMNodeListItem.h  DOMProcessingInstruction.cpp  DOMProcessingInstruction.h  DOMText.cpp  DOMText.h  Makefile.am  Makefile.gen  String_utils.cpp  String_utils.h  a  b  c  math_parser.cpp  math_parser_correction.ci
liblouisutdml/b2m_translator/backup/: math_parser.cpp  math_parser2.cpp  math_parser2_2.cpp  math_parser3.cpp  math_parser_correction.ci
liblouisutdml/b2m_translator/backup2/: math_parser.cpp  math_parser_correction.ci
liblouisutdml/b2m_translator/backup3/: math_parser.cpp  math_parser_correction.ci
liblouisutdml/b2m_translator/backup4/: math_parser.cpp  math_parser_correction.ci
liblouisutdml/b2m_translator/backup5/: math_parser.cpp
(+20 files in other folders)
